--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
-<title>租金计算器 - 机源堂</title>
+<title>租金计算器 - 益租宝</title>
 <meta name="keywords" content="移动设备管理,手机租赁管理,手机租赁服务,监管锁,激活锁,设备锁,远程锁机">
 <meta name="description" content="移动设备管理,手机租赁管理,手机租赁服务,监管锁,激活锁,设备锁,远程锁机">
 <meta name="renderer" content="webkit">
@@ -58,7 +58,7 @@ if (typeof(require) == 'function'){
         <div class="layadmin-user-login-box layadmin-user-login-body layui-form" style="padding: 30px 20px 20px 20px;">
         <div class="center-container">
     		<div class="layui-logo"><svg t="1689933788644" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4237" width="128" height="128"><path d="M904.256 341.504c-161.024 106.112-139.328 329.184 27.488 413.088-29.408 88.448-75.584 166.848-142.912 231.808-36.832 35.552-80.864 46.976-130.528 29.568-14.112-4.928-28.352-9.504-42.176-15.168-56.096-23.008-111.648-21.6-168 0.192-102.944 39.808-142.368 28.352-211.36-58.144-81.856-102.592-129.504-219.2-142.368-349.696-7.744-78.624 4.576-153.792 45.12-222.752 62.336-106.016 179.744-151.072 293.568-105.184 59.872 24.128 112.704 24.576 171.68-0.352 94.56-39.936 184.704-27.104 264.896 39.232C882.528 314.72 892.576 328.704 904.256 341.504z" p-id="4238" fill="#1296db"></path><path d="M716.416 0.288c11.52 121.344-94.4 240.896-199.584 228.192C494.656 123.904 608.16-7.136 716.416 0.288z" p-id="4239" fill="#1296db"></path></svg><br>
-    		<span style="align:center"><b>机源堂</b></span><br>
+    		<span style="align:center"><b>益租宝</b></span><br>
     		<span style="align:center"><b>租金计算器</b></span>
     		</div>
     		</div>
