尝试阻止弹出输入法

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ if (typeof(require) == 'function'){
 		  <input type="hidden" name="serial" value="">
         </div>
         <div class="layui-form-item">
-			<select name="period" id="period" lay-verify="required" lay-search="">
+			<select name="period" id="period" lay-verify="required" lay-search="readonly">
 		    <option value="0" selected="selected">请选择租期</option>
 		        <option value="3">3期</option>
 		        <option value="4">4期</option>
